--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,15 +16,20 @@
 
 	<style>
 		body {
-			margin:0;
-			padding:0;
+			margin: 0;
+			padding: 0;
 			overflow: hidden;
 		}
+
 		canvas {
-			margin:auto;
+			margin: auto;
 		}
 	</style>
 </head>
+
 <body>
+	<a id="next" href="https://jaessscript.github.io/thankyou/" title="Link to next page">Next-></a>
+	<p id="click">Click anywhere!</p>
 </body>
+
 </html>
