--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
 			margin: 0;
 			padding: 0;
 			overflow: hidden;
+			background-color: rgb(30, 30, 30);
+
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+
+			font-family: 'Courier New', Courier, monospace;
 		}
 
 		canvas {
